--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT=4001
-MongoDBURI="mongodb://localhost:27017/BookAppFinal"
+MongoDBURI="mongodb+srv://ayushshrirao16:ayush@123@cluster0.rgllb.mongodb.net/"
